--- a/logarr.css
+++ b/logarr.css
@@ -1,173 +1,171 @@
-<style type="text/css">
-                    
-            body::-webkit-scrollbar {
-                width: 10px;
-                background-color: white;
-            }
- 
-            body::-webkit-scrollbar-track {
-                -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-                border-radius: 10px;
-                background-color: #252525;
-            }
- 
-            body::-webkit-scrollbar-thumb {
-                border-radius: 10px;
-                -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-                background-color: #8E8B8B;
-            }
-        
-            .Row {
-                display: table;
-                width: 100%;
-                height: 125px;
-                table-layout: fixed;
-                border-spacing: 1px;
-            }
+/* LOGARR SYLESHEET */
+	/* SCROLL BAR */
+    body::-webkit-scrollbar {
+        width: 10px;
+        background-color: white;
+    }
 
-            .Column {
-                display: table-cell;
-                padding: 10px;
-            }
+    body::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        border-radius: 10px;
+        background-color: #252525;
+    }
 
-            #time {
-                text-align: left;
-                vertical-align: middle;
-            }
+    body::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        background-color: #8E8B8B;
+    }
+	
+    .Row {
+        display: table;
+        width: 100%;
+        height: 125px;
+        table-layout: fixed;
+        border-spacing: 1px;
+    }
 
-            #logo {
-                text-align: center;
-                vertical-align: middle;
-            }
+    .Column {
+        display: table-cell;
+        padding: 10px;
+    }
 
-            #search {
-                text-align: right;
-                vertical-align: middle;
-            }
+    #time {
+        text-align: left;
+        vertical-align: middle;
+    }
 
-		html
+    #logo {
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    #search {
+        text-align: right;
+        vertical-align: middle;
+    }
+
+html
+{
+}
+
+	.container h1
+	{
+		font-size: 42px;
+		font-weight: 300;
+		color: #5594b3;
+		margin-bottom: 40px;
+	}
+		.container h1 a:hover,
+		.container h1 a:focus
 		{
+			color: #a664b7;
 		}
 
-			.container h1
+	.container p
+	{
+		line-height: 1.6;
+	}
+
+	.faq {
+		display: table-cell;
+        padding: 10px;
+		vertical-align: middle;			
+	}
+	.faq input
+	{
+		width: 100%;
+		height: 50px;
+		font-size: 12px; color: white;
+		background-color: #404040;
+		box-shadow: 0px 2px 4px rgba( 52, 67, 75, .2 );
+		display: block;
+		padding: 0 10px;
+		margin-bottom: 10px;
+
+		-webkit-transition: box-shadow .1s linear;
+		transition: box-shadow .1s linear;
+	}
+	.faq input::-webkit-input-placeholder	{ color: #a1bdcb !important; }
+	.faq input::-moz-placeholder			{ color: #a1bdcb !important; }
+	.faq input:-ms-input-placeholder		{ color: #a1bdcb !important; }
+	.faq input:focus
+	{
+		box-shadow: 0px 4px 8px rgba( 52, 67, 75, .4 );
+	}
+	.faq .highlight
+	{
+		background-color: #fffd77;
+	}
+	.faq > ul
+	{
+	}
+		.faq > ul > li
+		{
+		}
+		.faq > ul > li:not( :first-child )
+		{
+			border-top: 1px solid #dcebed;
+			margin-top: 20px;
+			padding-top: 20px;
+		}
+		.faq > ul > li.is-hidden
+		{
+			display: none;
+		}
+			.faq > ul > li h2
 			{
-				font-size: 42px;
-				font-weight: 300;
-				color: #5594b3;
-				margin-bottom: 40px;
+				font-size: 24px;
+				font-weight: 700;
 			}
-				.container h1 a:hover,
-				.container h1 a:focus
+				.faq > ul > li h2:hover,
+				.faq > ul > li h2:focus,
+				.faq > ul > li.is-active h2,
+				.faq > ul > li:target h2
 				{
 					color: #a664b7;
 				}
-
-			.container p
+			.faq > ul > li > div
 			{
-				line-height: 1.6;
+				display: none;
 			}
-
-			.faq {
-				display: table-cell;
-                padding: 10px;
-				vertical-align: middle;			
-			}
-			.faq input
+			.faq > ul > li.is-active > div,
+			.faq > ul > li:target > div
 			{
-				width: 100%;
-				height: 50px;
-				font-size: 12px; color: white;
-				background-color: #404040;
-				box-shadow: 0px 2px 4px rgba( 52, 67, 75, .2 );
 				display: block;
-				padding: 0 10px;
-				margin-bottom: 10px;
-
-				-webkit-transition: box-shadow .1s linear;
-				transition: box-shadow .1s linear;
+				margin-top: 10px;
 			}
-			.faq input::-webkit-input-placeholder	{ color: #a1bdcb !important; }
-			.faq input::-moz-placeholder			{ color: #a1bdcb !important; }
-			.faq input:-ms-input-placeholder		{ color: #a1bdcb !important; }
-			.faq input:focus
-			{
-				box-shadow: 0px 4px 8px rgba( 52, 67, 75, .4 );
-			}
-			.faq .highlight
-			{
-				background-color: #fffd77;
-			}
-			.faq > ul
-			{
-			}
-				.faq > ul > li
-				{
-				}
-				.faq > ul > li:not( :first-child )
-				{
-					border-top: 1px solid #dcebed;
-					margin-top: 20px;
-					padding-top: 20px;
-				}
-				.faq > ul > li.is-hidden
-				{
-					display: none;
-				}
-					.faq > ul > li h2
-					{
-						font-size: 24px;
-						font-weight: 700;
-					}
-						.faq > ul > li h2:hover,
-						.faq > ul > li h2:focus,
-						.faq > ul > li.is-active h2,
-						.faq > ul > li:target h2
-						{
-							color: #a664b7;
-						}
-					.faq > ul > li > div
-					{
-						display: none;
-					}
-					.faq > ul > li.is-active > div,
-					.faq > ul > li:target > div
-					{
-						display: block;
-						margin-top: 10px;
-					}
 
-				.faq__notfound
-				{
-					font-size: 14px;
-					font-style: italic;
-					display: none;
-				}
-				.faq__notfound.is-visible
-				{
-					display: block;
-				}
+		.faq__notfound
+		{
+			font-size: 14px;
+			font-style: italic;
+			display: none;
+		}
+		.faq__notfound.is-visible
+		{
+			display: block;
+		}
 
-            #slide {
-                border: 1px solid black;
-            }
-            #slide-body{  
-                overflow: auto;
-                transition:     height 500ms ease;
-                    -moz-transition:    height 500ms ease;
-                    -ms-transition:     height 500ms ease;
-                    -o-transition:      height 500ms ease;
-                    -webkit-transition: height 500ms ease;
-            }
-            .expanded {
-                height: 600px !important;
-            }
-            #more {    
-                cursor: pointer;
-                text-align: right;
-            }
-            
-			.auto-style1 {
-                font-size: x-small;
-            }
-
-        </style>
+    #slide {
+        border: 1px solid black;
+    }
+    #slide-body{  
+        overflow: auto;
+        transition:     height 500ms ease;
+            -moz-transition:    height 500ms ease;
+            -ms-transition:     height 500ms ease;
+            -o-transition:      height 500ms ease;
+            -webkit-transition: height 500ms ease;
+    }
+    .expanded {
+        height: 600px !important;
+    }
+    #more {    
+        cursor: pointer;
+        text-align: right;
+    }
+    
+	.auto-style1 {
+        font-size: x-small;
+    }
