--- a/logarr.css
+++ b/logarr.css
@@ -1,191 +1,293 @@
-<?php
-function readExternalLog($filename)
-{
-    $log = file($filename);
-    $log = array_reverse($log);
-    foreach ($log as $line) {
-        echo $line.'<br/>';
+/* LOGARR SYLESHEET */
+
+
+/* Top Margin */
+
+.Row {
+    display: table;
+    width: 100%;
+    height: 125px;
+    table-layout: fixed;
+    border-spacing: 1px;
+}
+
+.Column {
+    display: table-cell;
+    padding: 10px;
+}
+
+#timestamp {
+    text-align: left;
+    vertical-align: middle;
+}
+
+#time {
+    text-align: left;
+    vertical-align: middle;
+}
+
+#logo {
+    text-align: center;
+    vertical-align: middle;
+}
+
+#search {
+    text-align: right;
+    vertical-align: middle;
+}
+
+.container h1 {
+    font-size: 42px;
+    font-weight: 300;
+    color: #5594b3;
+    margin-bottom: 40px;
+}
+
+.container h1 a:hover,
+.container h1 a:focus {
+    color: #a664b7;
+}
+
+.container p {
+    line-height: 1.6;
+}
+
+
+/* Body */
+
+.header {
+    text-align: center;
+    vertical-align: middle;
+    font-size: 32px;
+    font-weight: 300;
+    color: #EEEBEC;
+    text-shadow: 0 0 20px #FF0104;
+}
+
+.row2 {
+    display: table;
+    width: 100%;
+    height: 50px;
+    table-layout: fixed;
+    border-spacing: 1px;
+}
+
+
+/* Progress Bar */
+
+.pace {
+    -webkit-pointer-events: none;
+    pointer-events: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+
+.pace-inactive {
+    display: none;
+}
+
+.pace .pace-progress {
+    background: #680233;
+    position: fixed;
+    z-index: 2000;
+    top: 0;
+    right: 100%;
+    width: 100%;
+    height: 8px;
+}
+
+.pace .pace-progress-inner {
+    display: block;
+    position: absolute;
+    right: 0px;
+    width: 100px;
+    height: 100%;
+    box-shadow: 0 0 10px #680233, 0 0 5px #680233;
+    opacity: 1.0;
+    -webkit-transform: rotate(3deg) translate(0px, -4px);
+    -moz-transform: rotate(3deg) translate(0px, -4px);
+    -ms-transform: rotate(3deg) translate(0px, -4px);
+    -o-transform: rotate(3deg) translate(0px, -4px);
+    transform: rotate(3deg) translate(0px, -4px);
+}
+
+.pace .pace-activity {
+    display: block;
+    position: fixed;
+    z-index: 2000;
+    top: 15px;
+    right: 15px;
+    width: 14px;
+    height: 14px;
+    border: solid 2px transparent;
+    border-top-color: #680233;
+    border-left-color: #680233;
+    border-radius: 10px;
+    -webkit-animation: pace-spinner 400ms linear infinite;
+    -moz-animation: pace-spinner 400ms linear infinite;
+    -ms-animation: pace-spinner 400ms linear infinite;
+    -o-animation: pace-spinner 400ms linear infinite;
+    animation: pace-spinner 400ms linear infinite;
+}
+
+@-webkit-keyframes pace-spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
-include 'config/config.php';
-/**
-* Converts bytes into human readable file size.
-*
-* @param string $bytes
-* @return string human readable file size (2,87 Мб)
-* @author Mogilev Arseny
-*/
-function FileSizeConvert($bytes)
-{
-    $bytes = floatval($bytes);
-        $arBytes = array(
-            0 => array(
-                "UNIT" => "TB",
-                "VALUE" => pow(1024, 4)
-            ),
-            1 => array(
-                "UNIT" => "GB",
-                "VALUE" => pow(1024, 3)
-            ),
-            2 => array(
-                "UNIT" => "MB",
-                "VALUE" => pow(1024, 2)
-            ),
-            3 => array(
-                "UNIT" => "KB",
-                "VALUE" => 1024
-            ),
-            4 => array(
-                "UNIT" => "B",
-                "VALUE" => 1
-            ),
-        );
 
-    foreach ($arBytes as $arItem) {
-        if ($bytes >= $arItem["VALUE"]) {
-            $result = $bytes / $arItem["VALUE"];
-            $result = str_replace(".", ",", strval(round($result, 2)))." ".$arItem["UNIT"];
-            break;
-        }
+@-moz-keyframes pace-spinner {
+    0% {
+        -moz-transform: rotate(0deg);
+        transform: rotate(0deg);
     }
-    return $result;
+    100% {
+        -moz-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-?>
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title><?php echo $config['title']; ?></title>
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png" />
-        <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196" />
-        <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16" />
-        <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128" />
-        <meta name="application-name" content="Logarr"/>
-        <meta name="msapplication-TileColor" content="#FFFFFF" />
-        <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png" />
-        <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png" />
-        <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png" />
-        <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
-        <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
-        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400" />
-        <link rel="stylesheet" href="logarr.css" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="Demo of Real-Time Search in JavaScript" />
-        <meta name="robots" content="NOINDEX, NOFOLLOW">
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+@-o-keyframes pace-spinner {
+    0% {
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
 
-                   
-        <script src="pace.js"></script>
+@-ms-keyframes pace-spinner {
+    0% {
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
 
-        <script type= "text/javascript" src="jquery.min.js"> </script>
-        <script type= "text/javascript">
-            $(document).ready(function() {
-
-                function update() {
-                $.ajax({
-                type: 'POST',
-                url: 'config/timestamp.php',
-                timeout: 1000,
-                success: function(data) {
-                    $("#timer").html(data); 
-                    window.setTimeout(update, 1000);
-                }
-                });
-                }
-                update();
-
-            });
-
-        </script>
-
-        <script src="jquery_search.js"></script>
+@keyframes pace-spinner {
+    0% {
+        transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
 
 
-        <script type="text/javascript" src="hilitor.js"></script>
-        <script type="text/javascript">
+/* SEARCH */
 
-            var myHilitor; // global variable
-            document.addEventListener("DOMContentLoaded", function(e) {
-            myHilitor = new Hilitor("content");
-            myHilitor.apply("error");
-            }, false);
+.highlight {
+    background-color: #680233;
+    -moz-border-radius: 5px;
+    /* FF1+ */
+    -webkit-border-radius: 5px;
+    /* Saf3-4 */
+    border-radius: 5px;
+    /* Opera 10.5, IE 9, Saf5, Chrome */
+    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
+    /* FF3.5+ */
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
+    /* Saf3.0+, Chrome */
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
+    /* Opera 10.5+, IE 9.0 */
+}
 
-        </script>
+.highlight {
+    padding: 1px 4px;
+    margin: 0 -4px;
+}
 
-        <script type='text/javascript'>//<![CDATA[
-            window.onload=function(){
-            document.getElementById( 'slide' ).addEventListener( 'click', function() {
-                var body = document.getElementById( 'slide-body' );
-                if( body.className == 'expanded' ) {
-                    body.className = '';
-                    document.getElementById( 'more' ).textContent = 'more...';
-                } else {
-                    body.className = 'expanded';
-                    document.getElementById( 'more' ).textContent = 'less...';
-                };
-            } );
-            }//]]> 
-        </script>
-
-    </head>
-    
-    <body id="body" body style="border: 10px solid #252525; color: #FFFFFF; background-color: #252525;">
-    
-        <div class="Row">
-        
-            <div id="timer" class="Column"></div>
-
-            <div id="logo" class="Column">
-                <img src="images/log-icon.png" height="125px" />
-            </div>
-                        
-            <div id="search"  class="Column">
-                <input name="text-search" id="text-search"  type="text"                  size="20" maxlength="30" placeholder="search & highlight">
-                <input name="searchit"    id="searchButton" type="button" value="Search" onClick="highlight()">
-            </div>
-    
-        </div>
+#slide span {
+    background-color: #680233;
+    color: #FFFFFF;
+}
 
 
-        <?php foreach ($logs as $k => $v) { ?>
-            <div class="row2">
-            
-                <div id="filepath" class="left">
-                    <strong><?php echo $v; ?></strong>
-                </div>
+/* SCROLL BARS */
 
-                <div id="header" class="w3-container w3-center">
-                    <h3><span class="header"><strong><?php echo $k; ?>:</strong></span></h3>
-                </div>
-                            
-                <div id="filesize"  class="right">
-                     Log File Size: <strong> <?php echo filesize($v) . ' bytes'; ?></strong>
-                </div>
-        
-            </div>
-                        
-            <div id="slide">
-                <div class="<?php echo $k; ?>" id="slide-body">
-                    <p><?php readExternalLog($v); ?></p>
-                </div>
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: white;
+}
 
-                <div id="more" class="more"><strong>more...</strong></div>
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #252525;
+}
 
-            </div>
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #8E8B8B;
+}
 
-        <?php } ?>
 
-    </body>
-    
-</html>
+/* SLIDING DIVs */
+
+#slide {
+    border: 1px solid black;
+    margin: 0px 10px;
+}
+
+#slide-body {
+    overflow: auto;
+    background-color: #404040;
+    word-wrap: break-word;
+    width: auto;
+    height: 280px;
+    overflow-y: scroll;
+    padding: 10px;
+    transition: height 500ms ease;
+    -moz-transition: height 500ms ease;
+    -ms-transition: height 500ms ease;
+    -o-transition: height 500ms ease;
+    -webkit-transition: height 500ms ease;
+}
+
+#more {
+    cursor: pointer;
+    text-align: right;
+    margin: 0px 0px;
+}
+
+.left {
+    display: table-cell;
+    text-align: left;
+    vertical-align: bottom;
+    padding: 8px;
+    font-size: 14px;
+    color: #8C8C8C;
+}
+
+.right {
+    display: table-cell;
+    text-align: right;
+    vertical-align: bottom;
+    padding: 8px;
+    font-size: 14px;
+    color: #8C8C8C;
+}
+
+.expanded {
+    height: 600px !important;
+}
+
+.auto-style1 {
+    font-size: x-small;
+}
