--- a/logarr.css
+++ b/logarr.css
@@ -363,32 +363,60 @@ label::before {
 
 /* Search Indicator */
 
-.modal {
-    position: fixed;
-    z-index: 999;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: Black;
-    filter: alpha(opacity=60);
-    opacity: 0.6;
-    -moz-opacity: 0.8;
+#submit:focus {
+    outline: none;
+    outline-offset: none;
 }
 
-.center {
-    z-index: 1000;
-    margin: 300px auto;
-    padding: 10px;
-    width: 130px;
-    background-color: White;
-    border-radius: 10px;
-    filter: alpha(opacity=100);
-    opacity: 1;
-    -moz-opacity: 1;
+.button {
+    display: inline-block;
+    padding: 6px 12px;
+    margin: 20px 8px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    background-image: none;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    color: #000;
+    background-color: #b2b2b2;
+    border-color: #969696;
 }
 
-.center img {
-    height: 128px;
-    width: 128px;
+.button_loader {
+    background-color: transparent;
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid #969696;
+    border-bottom: 4px solid #969696;
+    width: 35px;
+    height: 35px;
+    -webkit-animation: spin 0.8s linear infinite;
+    animation: spin 0.8s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    99% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    99% {
+        transform: rotate(360deg);
+    }
 }
