--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -108,15 +108,6 @@ h6,
     width: 40%;
 }
 
-.input {
-    text-align: left;
-    vertical-align: middle;
-    height: 30px;
-    width: 65%;
-    max-width: 225px;
-    font-size: 16px;
-}
-
 
 /* Progress Bar */
 
@@ -254,6 +245,21 @@ h6,
     background-color: #680233;
     color: #FFFFFF;
 }
+
+.input {
+    text-align: left;
+    vertical-align: middle;
+    height: 30px;
+    width: 65%;
+    max-width: 225px;
+    font-size: 16px;
+}
+
+.count {
+    text-align: right;
+    margin-right:100px;
+    font-size: 15px;
+} 
 
 
 /* SCROLL BARS */
