--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -11,6 +11,28 @@ body {
     color: #FFFFFF;
 }
 
+/* SCROLL BARS */
+
+
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: #252525;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #252525;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #8E8B8B;
+}
+
 .header {
     text-align: center;
     vertical-align: middle;
@@ -18,6 +40,7 @@ body {
     font-weight: 300;
     color: #EEEBEC;
     text-shadow: 0 0 20px #FF0104;
+    cursor: default;
 }
 
 .row2 {
@@ -27,7 +50,26 @@ body {
     table-layout: fixed;
     border-spacing: 0px;
     padding-top: 5px;
+    padding-right: 2em;
+    padding-left: 1em;
 }
+
+table,
+th,
+td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+tbody {
+    background-color: transparent;
+    cursor: pointer;
+}
+
+tr {
+    width: 100%
+}
+
 
 
 /* Titles */
@@ -94,6 +136,7 @@ h6,
     vertical-align: middle;
     width: 40%;
     font-size: 18px;
+    cursor: default;
 }
 
 #logo {
@@ -102,12 +145,363 @@ h6,
     width: 20%;
 }
 
-#search {
+#right {
     text-align: right;
     vertical-align: middle;
     width: 40%;
 }
 
+.righttop {
+    text-align: right;
+    margin: 5px;
+    margin-bottom: 1em
+}
+
+.rightmiddle {
+    text-align: right;
+    margin: 5px;
+}
+
+.rightbottom {
+    text-align: right;
+    margin: 5px;
+}
+
+
+
+/* Refresh Switch */
+
+#slidertable {
+    display: inline-block;
+    margin: 0 auto;
+    padding-top: .2em;
+    padding-bottom: .2em;
+    border: 1px solid black;
+    border-radius: 8px;
+    background-color: #3d3d3d;
+    /* background-color: #8E8B8B; */
+    /* box-shadow: 3px 3px 3px black; */
+}
+
+#textslider {
+    width: .2em;
+    margin: auto;
+    padding-right: .4em;
+    padding-left: .5em;
+    font-size: 1em;
+}
+
+#slider {
+    padding-top: 1em;
+    margin: auto;
+    padding-right: .5em;
+    padding-left: .5em;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 24px;
+    height: 17px;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.switch::before {
+    content: "";
+}
+
+.switch input {
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: red;
+    -webkit-transition: .4s;
+    transition: .4s;
+    cursor: pointer;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
+    background-color: #f2f2f2;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: green;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px green;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(7px);
+    -ms-transform: translateX(7px);
+    transform: translateX(7px);
+}
+
+.slider.round {
+    border-radius: 22px;
+    width: 100%;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
+/* SEARCH */
+
+.highlight {
+    background-color: rgb(253, 0, 127);
+    -moz-border-radius: 5px;
+    /* FF1+ */
+    -webkit-border-radius: 5px;
+    /* Saf3-4 */
+    border-radius: 5px;
+    /* Opera 10.5, IE 9, Saf5, Chrome */
+    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
+    /* FF3.5+ */
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
+    /* Saf3.0+, Chrome */
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
+    /* Opera 10.5+, IE 9.0 */
+}
+
+.slide span {
+    background-color: #680233;
+    color: #FFFFFF;
+}
+
+.input {
+    text-align: left;
+    vertical-align: middle;
+    height: 30px;
+    width: 20vw;
+    max-width: 15em;
+    font-size: 16px;
+}
+
+.count {
+    text-align: right;
+}
+
+#count {
+    font-size: 15px;
+    padding-right: 5.5em;
+}
+
+
+/**** LOGS ****/
+
+
+/* SCROLL BARS */
+
+.expand::-webkit-scrollbar {
+    width: 10px;
+    background-color: #252525;
+}
+
+.expand::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #252525;
+}
+
+.expand::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #8E8B8B;
+}
+
+
+/* SLIDING DIVs */
+
+.slide {
+    border: 1px solid black;
+    margin: 0px 2em 0px 1em;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.left {
+    display: table-cell;
+    text-align: left;
+    vertical-align: bottom;
+    padding: 8px;
+    font-size: 14px;
+    color: #8C8C8C;
+}
+
+.right {
+    display: table-cell;
+    text-align: right;
+    vertical-align: bottom;
+    padding: 8px;
+    font-size: 14px;
+    color: #8C8C8C;
+}
+
+.expanded {
+    height: 600px !important;
+}
+
+.auto-style1 {
+    font-size: x-small;
+}
+
+p {
+    text-align: left;
+    margin: 5px;
+}
+
+input[type="checkbox"] {
+    display: none;
+    visibility: hidden;
+}
+
+label {
+    display: block;
+    background-color: #404040;
+    margin-top: -.8em;
+    position: absolute;
+    text-align: center;
+    color: #8C8C8C;
+    font-size: 15px;
+    text-shadow: 0 0 15px #FF0104;
+    right: 15px;
+    bottom: 10px;
+    padding: 0 5px 0 5px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    width: auto;
+    cursor: pointer;
+}
+
+label:hover {
+    color: #fff;
+}
+
+label::before {
+    font-weight: bold;
+    font-size: 15px;
+    content: "show less";
+    display: inline-block;
+    width: auto;
+    height: 20px;
+}
+
+.expand {
+    height: 600px;
+    overflow: auto;
+    transition: height 0.5s;
+    background-color: #404040;
+    word-wrap: break-word;
+    width: auto;
+    padding: 0 10px 0 10px;
+}
+
+.toggle:checked~.expand {
+    height: 250px;
+}
+
+.toggle:checked~label::before {
+    content: "show more";
+}
+
+
+
+/* Search Indicator */
+
+#submit:focus {
+    outline: none;
+}
+
+.button {
+    display: inline-block;
+    width: 5em;
+    padding: 8px 12px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    background-color: #8E8B8B;
+    border-color: #000000;
+}
+
+.button_loader {
+    background-color: transparent;
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid #969696;
+    border-bottom: 4px solid #969696;
+    width: 35px;
+    height: 35px;
+    -webkit-animation: spin 0.8s linear infinite;
+    animation: spin 0.8s linear infinite;
+} 
+
+
+
+/* Footer */
+
+.footer {
+    width: 100%;
+    text-align: center;
+    color: #555555;
+    font-size: 12px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.footer a {
+    text-decoration: none;
+    color: #555555;
+    font-size: 12px;
+}
+
+.footer:hover {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+/* .a {
+    color: #555555;
+    font-size: 1em;
+    text-shadow: none;
+    font-weight: 300;
+} */
 
 /* Progress Bar */
 
@@ -223,238 +617,6 @@ h6,
 }
 
 
-/* SEARCH */
-
-.highlight {
-    background-color: rgb(253, 0, 127);
-    -moz-border-radius: 5px;
-    /* FF1+ */
-    -webkit-border-radius: 5px;
-    /* Saf3-4 */
-    border-radius: 5px;
-    /* Opera 10.5, IE 9, Saf5, Chrome */
-    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
-    /* FF3.5+ */
-    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
-    /* Saf3.0+, Chrome */
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
-    /* Opera 10.5+, IE 9.0 */
-}
-
-.slide span {
-    background-color: #680233;
-    color: #FFFFFF;
-}
-
-.input {
-    text-align: left;
-    vertical-align: middle;
-    height: 30px;
-    width: 65%;
-    max-width: 225px;
-    font-size: 16px;
-}
-
-.count {
-    text-align: right;
-    margin-right:100px;
-} 
-
-#count {
-    font-size: 15px;
-}
-
-/* SCROLL BARS */
-
-
-/**** BODY ****/
-
-body::-webkit-scrollbar {
-    width: 10px;
-    background-color: #252525;
-}
-
-body::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background-color: #252525;
-}
-
-body::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #8E8B8B;
-}
-
-
-/**** LOGS ****/
-
-
-/* SCROLL BARS */
-
-.expand::-webkit-scrollbar {
-    width: 10px;
-    background-color: #252525;
-}
-
-.expand::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background-color: #252525;
-}
-
-.expand::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #8E8B8B;
-}
-
-
-/* SLIDING DIVs */
-
-.slide {
-    border: 1px solid black;
-    margin: 0px 10px;
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.left {
-    display: table-cell;
-    text-align: left;
-    vertical-align: bottom;
-    padding: 8px;
-    font-size: 14px;
-    color: #8C8C8C;
-}
-
-.right {
-    display: table-cell;
-    text-align: right;
-    vertical-align: bottom;
-    padding: 8px;
-    font-size: 14px;
-    color: #8C8C8C;
-}
-
-.expanded {
-    height: 600px !important;
-}
-
-.auto-style1 {
-    font-size: x-small;
-}
-
-
-/* new css */
-
-p {
-    text-align: left;
-    margin: 5px;
-}
-
-input[type="checkbox"] {
-    display: none;
-    visibility: hidden;
-}
-
-label {
-    display: block;
-    background-color: #404040;
-    margin-top: -.8em;
-    position: absolute;
-    text-align: center;
-    color: #8C8C8C;
-    font-size: 15px;
-    text-shadow: 0 0 15px #FF0104;
-    right: 15px;
-    bottom: 10px;
-    padding: 0 5px 0 5px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    width: auto;
-    cursor: pointer;
-}
-
-label:hover {
-    color: #fff;
-}
-
-label::before {
-    font-weight: bold;
-    font-size: 15px;
-    content: "show less";
-    display: inline-block;
-    width: auto;
-    height: 20px;
-}
-
-.expand {
-    height: 600px;
-    overflow: auto;
-    transition: height 0.5s;
-    background-color: #404040;
-    word-wrap: break-word;
-    width: auto;
-    padding: 0 10px 0 10px;
-}
-
-.toggle:checked~.expand {
-    height: 250px;
-}
-
-.toggle:checked~label::before {
-    content: "show more";
-}
-
-
-/* Search Indicator */
-
-#submit:focus {
-    outline: none;
-}
-
-.button {
-    display: inline-block;
-    padding: 8px 12px;
-    margin: 20px 8px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
-    user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 5px;
-    color: rgb(255, 255, 255);
-    background-color: #8E8B8B;
-    border-color: #000000;
-}
-
-.button_loader {
-    background-color: transparent;
-    border: 4px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 4px solid #969696;
-    border-bottom: 4px solid #969696;
-    width: 35px;
-    height: 35px;
-    -webkit-animation: spin 0.8s linear infinite;
-    animation: spin 0.8s linear infinite;
-}
-
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
@@ -471,26 +633,4 @@ label::before {
     99% {
         transform: rotate(360deg);
     }
-}
-
-
-/* Footer */
-
-.footer {
-    width: 100%;
-    text-align: center;
-    color: #555555;
-    font-size: 12px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.footer a {
-    text-decoration: none;
-    color: #555555;
-    font-size: 12px;
-}
-
-footer:hover {
-    color: #fff;
 }
